[gd_scene load_steps=12 format=2]

[ext_resource path="res://L2P1map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Viewport11.gd" type="Script" id=2]
[ext_resource path="res://L2P2map.tscn" type="PackedScene" id=3]
[ext_resource path="res://Viewport22.gd" type="Script" id=4]
[ext_resource path="res://L2.gd" type="Script" id=5]
[ext_resource path="res://assets/SFX/Let the Paranormal haunt!.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/SFX/winP2.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/SFX/winP1.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/Kenney Future.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 9 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 472.0
margin_bottom = 540.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 472, 540 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 2 )

[node name="TileMap" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 487.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 473, 540 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 4 )

[node name="TileMap" parent="Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 3 )]

[node name="P1win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="P2win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
autoplay = true

[node name="SwitchTime" type="Timer" parent="."]
wait_time = 2.6
one_shot = true

[node name="Tutorial" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Tutorial"]
margin_left = 119.0
margin_top = 256.0
margin_right = 840.0
margin_bottom = 283.0
alignment = 1

[node name="Label" type="Label" parent="Tutorial/HBoxContainer"]
margin_top = 3.0
margin_right = 675.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Now, it's time to haunt, please, don't leave the house!"

[node name="Button" type="Button" parent="Tutorial/HBoxContainer"]
margin_left = 679.0
margin_right = 721.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "OK"
[connection signal="five1" from="Viewports/ViewportContainer1/Viewport1/TileMap" to="." method="_on_TileMap_five1"]
[connection signal="five2" from="Viewports/ViewportContainer2/Viewport2/TileMap" to="." method="_on_TileMap_five2"]
[connection signal="timeout" from="SwitchTime" to="." method="_on_SwitchTime_timeout"]
[connection signal="pressed" from="Tutorial/HBoxContainer/Button" to="." method="_on_Button_pressed"]
